Sketch area working, reworked variables to add slider, added slider element. NYW.

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 #sketch-area {
     display: flex;
     flex-wrap: wrap;
-    margin: 100px auto;
+    margin: 100px auto 0 auto;
     background-color: white;
     box-shadow: 10px 10px rgba(0, 0, 0, 0.1); /* Fixed RGBA color for the shadow */
 }
@@ -22,4 +22,49 @@ body {
 .cell {
     border: 1px solid whitesmoke;
     box-sizing: border-box; /* Ensures the border is included in the width/height */
+}
+
+
+
+/* Styling for the slider */
+#res-slider {
+    margin: 0 auto;
+
+}
+
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 25px;
+    width: 100%;
+    background: rgba(200, 255, 200, 0.726);
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;   
+}
+
+#slider-value {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height:25px;
+    background: teal;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height:25px;
+    background: teal;
+    cursor: pointer;
 }
